--- a/style.css
+++ b/style.css
@@ -8860,9 +8860,9 @@ h1, h2, h3, h4, h5,
     font-size: 12px;
     margin-bottom: 10px;
     color: #ffbd39; }
-    
+
   /* .services-1:hover {
-    ; }
+    background: #ffbd39; }
     .services-1:hover .icon i {
       color: #fff; }
     .services-1:hover h3 {
