--- a/css/style.css
+++ b/css/style.css
@@ -8860,14 +8860,15 @@ h1, h2, h3, h4, h5,
     font-size: 12px;
     margin-bottom: 10px;
     color: #ffbd39; }
-  .services-1:hover {
+
+  /* .services-1:hover {
     background: #ffbd39; }
     .services-1:hover .icon i {
       color: #fff; }
     .services-1:hover h3 {
       color: #000000; }
       .services-1:hover h3:after {
-        background: #000000; }
+        background: #000000; } */
 
 .progress-wrap {
   width: 100%;
